--- a/data_normalization.ipynb
+++ b/data_normalization.ipynb
@@ -6,7 +6,7 @@
       "name": "data_normalization.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOt4hOINqH9gLkOF5ToIrNF",
+      "authorship_tag": "ABX9TyN6bTqV/D/eQX3cW9T/RCXJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -54,7 +54,7 @@
           "height": 204
         },
         "id": "hnxQWHzuXf-S",
-        "outputId": "82d7a685-f686-4f60-ee42-bf223d6b39a1"
+        "outputId": "9665b439-e75d-490a-b5dd-11d8d0ba0341"
       },
       "source": [
         "# Normalize prepared data\n",
@@ -63,11 +63,16 @@
         "train_df = pd.read_csv('https://raw.githubusercontent.com/treyra/CS155_miniproject/data_visualization_v1/data_cleanup/traindata_imputed.csv',sep=',', header=0,index_col=0)\n",
         "# normalize data\n",
         "test_df.head()\n",
+        "# # convert State from strings to numbers\n",
+        "# train_df['STATE'] = train_df['STATE'].replace([0],-1)\n",
+        "# test_df['STATE'] = test_df['STATE'].replace([2],-1)\n",
+        "# test_df['STATE'] = test_df['STATE'].replace([0],-1)\n",
+        "#test_df.head()\n",
         "\n",
         "#--- First stuff with same scale\n",
         "# change state categogy 2 to 0 - states in [0,1]\n",
-        "train_df['STATE']=train_df['STATE'].replace([2],0)\n",
-        "train_df['STATE']=train_df['STATE'].replace([2],0)\n",
+        "train_df['STATE']=train_df['STATE'].replace([2],-1)\n",
+        "test_df['STATE']=test_df['STATE'].replace([2],-1)\n",
         "# lat lon in radians first\n",
         "train_df['LATITUDE']=np.deg2rad(train_df['LATITUDE'])\n",
         "train_df['LONGITUDE']=np.deg2rad(train_df['LONGITUDE'])\n",
@@ -153,7 +158,7 @@
         "#\n",
         "traindata_normalized_minmax.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +217,7 @@
               "      <td>1</td>\n",
               "      <td>-0.401537</td>\n",
               "      <td>0.925104</td>\n",
-              "      <td>0</td>\n",
+              "      <td>-1</td>\n",
               "      <td>0.464583</td>\n",
               "      <td>-0.025770</td>\n",
               "      <td>-1.922012</td>\n",
@@ -227,7 +232,7 @@
               "      <td>2</td>\n",
               "      <td>-0.911691</td>\n",
               "      <td>1.066427</td>\n",
-              "      <td>0</td>\n",
+              "      <td>-1</td>\n",
               "      <td>0.666667</td>\n",
               "      <td>-0.026547</td>\n",
               "      <td>-1.906459</td>\n",
@@ -242,7 +247,7 @@
               "      <td>3</td>\n",
               "      <td>-0.814128</td>\n",
               "      <td>1.109280</td>\n",
-              "      <td>0</td>\n",
+              "      <td>-1</td>\n",
               "      <td>0.506250</td>\n",
               "      <td>-0.023489</td>\n",
               "      <td>-1.890905</td>\n",
@@ -285,7 +290,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -297,7 +302,7 @@
           "height": 204
         },
         "id": "_4MmzZ4ocSSy",
-        "outputId": "449b954e-8ccd-4e94-d8f7-48c79ddad930"
+        "outputId": "5bb97f18-5020-4e3a-b84d-80701333f945"
       },
       "source": [
         "# adding one hot encoding for training data\n",
@@ -313,7 +318,7 @@
         "traindata_normalized_standard = traindata_normalized_standard.join(enc_df)\n",
         "traindata_normalized_minmax.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -380,7 +385,7 @@
               "      <td>1</td>\n",
               "      <td>-0.401537</td>\n",
               "      <td>0.925104</td>\n",
-              "      <td>0</td>\n",
+              "      <td>-1</td>\n",
               "      <td>0.464583</td>\n",
               "      <td>-0.025770</td>\n",
               "      <td>-1.922012</td>\n",
@@ -399,7 +404,7 @@
               "      <td>2</td>\n",
               "      <td>-0.911691</td>\n",
               "      <td>1.066427</td>\n",
-              "      <td>0</td>\n",
+              "      <td>-1</td>\n",
               "      <td>0.666667</td>\n",
               "      <td>-0.026547</td>\n",
               "      <td>-1.906459</td>\n",
@@ -418,7 +423,7 @@
               "      <td>3</td>\n",
               "      <td>-0.814128</td>\n",
               "      <td>1.109280</td>\n",
-              "      <td>0</td>\n",
+              "      <td>-1</td>\n",
               "      <td>0.506250</td>\n",
               "      <td>-0.023489</td>\n",
               "      <td>-1.890905</td>\n",
@@ -458,9 +463,9 @@
             "text/plain": [
               "   id  LATITUDE  LONGITUDE  STATE  DISCOVERY_TIME  ...  LABEL    0    1    2    3\n",
               "0   0  0.988292  -0.985738      1        0.054167  ...      1  1.0  0.0  0.0  0.0\n",
-              "1   1 -0.401537   0.925104      0        0.464583  ...      4  0.0  0.0  0.0  1.0\n",
-              "2   2 -0.911691   1.066427      0        0.666667  ...      2  0.0  1.0  0.0  0.0\n",
-              "3   3 -0.814128   1.109280      0        0.506250  ...      4  0.0  0.0  0.0  1.0\n",
+              "1   1 -0.401537   0.925104     -1        0.464583  ...      4  0.0  0.0  0.0  1.0\n",
+              "2   2 -0.911691   1.066427     -1        0.666667  ...      2  0.0  1.0  0.0  0.0\n",
+              "3   3 -0.814128   1.109280     -1        0.506250  ...      4  0.0  0.0  0.0  1.0\n",
               "4   4 -0.448755  -0.759942      1        0.549583  ...      2  0.0  1.0  0.0  0.0\n",
               "\n",
               "[5 rows x 16 columns]"
@@ -469,7 +474,150 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "bqSCHcH04jaq",
+        "outputId": "85348ed6-35aa-4d6a-f3d7-03843419ee2d"
+      },
+      "source": [
+        "testdata_normalized_robust.head()"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>LATITUDE</th>\n",
+              "      <th>LONGITUDE</th>\n",
+              "      <th>STATE</th>\n",
+              "      <th>DISCOVERY_TIME</th>\n",
+              "      <th>FIRE_SIZE</th>\n",
+              "      <th>FIPS_NAME</th>\n",
+              "      <th>FIPS_CODE</th>\n",
+              "      <th>SOURCE_REPORTING_UNIT_NAME</th>\n",
+              "      <th>YEAR</th>\n",
+              "      <th>DAY</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>285382</td>\n",
+              "      <td>-0.232600</td>\n",
+              "      <td>-0.828839</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.66875</td>\n",
+              "      <td>-0.026456</td>\n",
+              "      <td>0.768803</td>\n",
+              "      <td>-0.435263</td>\n",
+              "      <td>-0.303789</td>\n",
+              "      <td>1.058824</td>\n",
+              "      <td>0.002732</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>285383</td>\n",
+              "      <td>-0.335939</td>\n",
+              "      <td>-0.760377</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.64375</td>\n",
+              "      <td>-0.026526</td>\n",
+              "      <td>0.784357</td>\n",
+              "      <td>-0.435263</td>\n",
+              "      <td>0.320212</td>\n",
+              "      <td>1.058824</td>\n",
+              "      <td>0.002732</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>285384</td>\n",
+              "      <td>0.945131</td>\n",
+              "      <td>-0.982574</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.50000</td>\n",
+              "      <td>-0.026526</td>\n",
+              "      <td>0.628819</td>\n",
+              "      <td>-0.001415</td>\n",
+              "      <td>-0.871063</td>\n",
+              "      <td>1.058824</td>\n",
+              "      <td>0.002732</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>285385</td>\n",
+              "      <td>-0.817080</td>\n",
+              "      <td>0.998962</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0.87500</td>\n",
+              "      <td>-0.026314</td>\n",
+              "      <td>-1.579828</td>\n",
+              "      <td>0.500935</td>\n",
+              "      <td>2.419125</td>\n",
+              "      <td>1.058824</td>\n",
+              "      <td>0.005464</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>285386</td>\n",
+              "      <td>-0.682598</td>\n",
+              "      <td>-0.695973</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.05250</td>\n",
+              "      <td>-0.026526</td>\n",
+              "      <td>1.204311</td>\n",
+              "      <td>-0.960447</td>\n",
+              "      <td>-0.681972</td>\n",
+              "      <td>1.058824</td>\n",
+              "      <td>0.005464</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       id  LATITUDE  LONGITUDE  ...  SOURCE_REPORTING_UNIT_NAME      YEAR       DAY\n",
+              "0  285382 -0.232600  -0.828839  ...                   -0.303789  1.058824  0.002732\n",
+              "1  285383 -0.335939  -0.760377  ...                    0.320212  1.058824  0.002732\n",
+              "2  285384  0.945131  -0.982574  ...                   -0.871063  1.058824  0.002732\n",
+              "3  285385 -0.817080   0.998962  ...                    2.419125  1.058824  0.005464\n",
+              "4  285386 -0.682598  -0.695973  ...                   -0.681972  1.058824  0.005464\n",
+              "\n",
+              "[5 rows x 11 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
         }
       ]
     },
@@ -480,7 +628,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BaPpiu93c6Di",
-        "outputId": "723d75ac-f1ce-4e4b-b610-fedddb0ae6c0"
+        "outputId": "f16e0288-85d8-4565-b394-03f30407e958"
       },
       "source": [
         "# put it together in a dataframe and save\n",
@@ -494,10 +642,10 @@
         "save_csv(traindata_normalized_robust, 'traindata_imputed_normalized_robust')\n",
         "save_csv(traindata_normalized_standard, 'traindata_imputed_normalized_standard')\n",
         "save_csv(testdata_normalized_minmax, 'testdata_imputed_normalized_minmax')\n",
-        "save_csv(traindata_normalized_robust, 'testdata_imputed_normalized_robust')\n",
-        "save_csv(traindata_normalized_standard, 'testdata_imputed_normalized_standard')\n"
+        "save_csv(testdata_normalized_robust, 'testdata_imputed_normalized_robust')\n",
+        "save_csv(testdata_normalized_standard, 'testdata_imputed_normalized_standard')\n"
       ],
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
